# Projects

./: CMakeLists.txt  Dockefile_1  Dockerfile  Dockerfile1  Projects  README.md  remove_docker.sh  run_docker.sh  test.cpp
includes/: OCR.h  graph.h  image_process.h  reader.h  recognition.h  solver.h
src/: OCR.cpp  graph.cpp  image_process.cc  main.cpp  recognition.cc  solver.cpp
test/: CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake  displayimage.cpp
tests/: test.cc
